fix issues with keyboard on mobile devices, clear input after submit

--- a/src/components/styles/Evolution.scss
+++ b/src/components/styles/Evolution.scss
@@ -20,7 +20,8 @@
             margin: 0.5em 2em;
         }
 
-        &:hover{
+        &:hover,
+        &:active {
             background: #444;
             transform: scale(1.1);
             img {
